--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="inner">
           <!-- <h3 class="masthead-brand">Cover</h3> -->
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="">Home</a>
             <a class="nav-link" href="/minecraft">Minecraft</a>
             <a class="nav-link" href="">Projects</a>
             <a class="nav-link" href="/contact">Contact</a>
