--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <!-- Switch out with another icon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.png">
     <!--  -->
 
     <title>Matt Rieckenberg</title>
