--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="">Home</a>
             <a class="nav-link" href="/minecraft">Minecraft</a>
-            <a class="nav-link" href="/projects">Projects</a>
-            <a class="nav-link" href="/contact">Contact</a>
+            <!-- <a class="nav-link" href="/projects">Projects</a> -->
+            <!-- <a class="nav-link" href="/contact">Contact</a> -->
           </nav>
         </div>
       </header>
@@ -50,6 +50,39 @@
 </svg></a>
         </p>
       </main>
+      <br>
+      <h2>My Projects</h2>
+      <br>
+      <h3>The 2021 Political Compass Test</h3>
+          <p>An online test which scores political opinions on a 2-dimensional chart known as the political compass, which is based on an <a href="https://politicalcompass.org/" style="color: #89CFF0;">already existing test</a> made in 2001. Made in summer 2021 by Matt Rieckenberg and Caleb Stanton.</p>
+           <a href="https://thepoliticalcompass.herokuapp.com/" target="blank" class="btn btn-lg btn-secondary">www.thepoliticalcompass.herokuapp.com 
+
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+          <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+          <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z"/>
+          </svg> -->
+        </a>
+          <br>
+          <br>
+
+          <h3>Qweather</h3>
+          <p> A Python desktop GUI app that displays the weather conditions in Kingston, ON, Canada. Uses weather data from <a href="https://openweathermap.org/api" style="color: #89CFF0;">OpenWeatherMap's Weather API</a>. Made in summer 2020, my first programming project.</p>
+           <a href="https://thepoliticalcompass.herokuapp.com/" target="blank" class="btn btn-lg btn-secondary">
+
+
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+          <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+          <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z"/>
+          </svg> -->
+          View source code
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+          </svg>
+
+        </a>
+          <br>
+          <br>
+
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
