--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </header>
 
-      <main role="main" class="inner cover" style="height: 150%;">
+      <main role="main" class="inner cover">
         <h1 class="cover-heading" style="color: #D4F1EF;">Matt Rieckenberg</h1>
         <br>
 
