--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
       <br>
 
 
-      <footer class="mastfoot mt-auto">
+<!--       <footer class="mastfoot mt-auto">
         <div class="inner">
           <!-- <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p> -->
-          <p>2023</p>
-        </div>
-      </footer>
+<!--           <p>2023</p> -->
+<!--         </div> -->
+<!--       </footer> --> -->
     </div>
 
 
