--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <a href="https://www.linkedin.com/in/matt-rieckenberg-95091a1a2/" target="blank" class="btn btn-lg btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
   <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
 </svg></a>
+         <a href="mailto:matt.rieckenberg@queensu.ca" target="blank" class="btn btn-lg btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+  <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+</svg></a>
         </p>
       </main>
       <br>
@@ -67,7 +70,7 @@
 
           <h3>Qweather</h3>
           <p> A Python desktop GUI app that displays the weather conditions in Kingston, ON, Canada. Uses weather data from <a href="https://openweathermap.org/api" style="color: #89CFF0;">OpenWeatherMap's Weather API</a>. Made in summer 2020, my first programming project.</p>
-           <a href="https://thepoliticalcompass.herokuapp.com/" target="blank" class="btn btn-lg btn-secondary">
+           <a href="https://github.com/mrieckenberg/Qweather" target="blank" class="btn btn-lg btn-secondary">
 
 
             <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
