Updates to the homepage.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <br>
       <h3>The 2021 Political Compass Test</h3>
           <p>An online test which scores political opinions on a 2-dimensional chart known as the political compass, which is based on an <a href="https://politicalcompass.org/" style="color: #89CFF0;">already existing test</a> made in 2001. Made in summer 2021 by Matt Rieckenberg and Caleb Stanton.</p>
-           <a href="https://thepoliticalcompass.herokuapp.com/" target="blank" class="btn btn-lg btn-secondary">www.thepoliticalcompass.herokuapp.com 
+           <a href="https://thepoliticalcompass.herokuapp.com/" target="blank" class="btn btn-lg btn-secondary">https://thepoliticalcompass.herokuapp.com/
 
             <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
           <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
@@ -85,11 +85,19 @@
         </a>
           <br>
           <br>
-      <br>
-      <br>
-<br>
-      <br>
-      <p>2023</p>
+          <h3>Math Tool</h3>
+          <p>A tool made for a quick reference when doing math.</p>
+           <a href="https://mrieckenberg.github.io/math_tool/" target="blank" class="btn btn-lg btn-secondary">
+
+
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+          <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+          <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z"/>
+          </svg> -->
+          https://mrieckenberg.github.io/math_tool/
+          </a>
+          <br><br>
+          <p>2023</p>
 
 <!--       <footer class="mastfoot mt-auto">
         <div class="inner">
