--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="">Home</a>
             <a class="nav-link" href="/minecraft">Minecraft</a>
-            <a class="nav-link" href="/math_tool">Math Tool</a>
+            <!-- <a class="nav-link" href="/math_tool">Math Tool</a> -->
             <!-- <a class="nav-link" href="/contact">Contact</a> -->
           </nav>
         </div>
